2017-03-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.2
	* DESCRIPTION (Description): Reworded and shortened

	* src/init.c (R_init_RcppGSL): Call R_registerRoutines()
	and R_useDynamicSymbols()

	* NAMESPACE: Use .registration=TRUE on useDynLib

	* R/fastLm.R (fastLmPure): Use PACKAGE= with .Call()

	* README.md: One more canonical URL

2017-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/skeleton/configure (GSL_LIBS): No longer need RCPP_LIBS
	* inst/skeleton/configure.win (GSL_LIBS): Idem
	* inst/skeleton/Makevars.in (PKG_CPPFLAGS): Idem
	* inst/skeleton/Makevars.win (PKG_LIBS): Idem

	* R/inline.R: Updated / edited

2016-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.1

	* tests/doRUnit.R: Rewritten in simpler form following lead of some
	other packages using the RUnit testing frameworks

	* R/unit.test.R: Remove unused and unexported function
	* inst/unitTests/runTests.R: Ditto

	* vignettes/RcppGSL-intro.Rnw: Restore 'boxed' display of code

	* .travis.yml: Switch to using run.sh for Travis CI

2016-05-19  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-unitTests.Rnw: Do not write unit test results to
	/tmp per request from CRAN to not write outside test directories

2015-08-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.0

	* vignettes/RcppGSL-intro.Rnw: Minor edits

2015-08-29  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rnw: Updated throughout

2015-08-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/bSpline/bSpline.cpp: Updated example

2015-08-18  Daniel C. Dillon <dcdillon@gmail.com>

	* inst/include/RcppGSLForward: Rework vector_view and matrix_view to
	better support const variants
	* inst/include/RcppGSL_types.h: Idem
	* inst/examples/RcppGSLExample/src/colNorm.cpp: Update usage example
	* inst/unitTests/cpp/gsl.cpp: Update unite tests

2015-08-18  Dirk Eddelbuettel  <edd@debian.org>
